# address-book

./: README.md
AddressRs/: Cargo.toml  readme.md
AddressRs/db/: address.db
AddressRs/migrations/: 20240106162252_addr.sql
AddressRs/src/: main.rs  model.rs  sql.rs
AdressPy/: main.py  readme.md  requirements.txt  sql.py
AdressPy/db/: address.db
AdressPy/util/: model.py
