[package]
name = "AddressRs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-async-std-native-tls"]}
tokio = { version = "1.35.1", features = ["full"] }
